Add better fatigue anims; keep up with MCA; fix pheno:hydrate